Update layout and add background video
Update grid with rows and columns. Create resources folder and add default background video.

--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -5,8 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GameLauncher"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="720" Width="1280" AllowsTransparency="True">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="4*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+        </Grid>
+        <MediaElement Source="/Resources/Jhin.mp4" 
+                      Name="VideoPlayer" Stretch="UniformToFill" Volume="0.1" Grid.RowSpan="2" />
     </Grid>
 </Window>
