--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -11,14 +11,17 @@
             <RowDefinition Height="4*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="1">
+        <MediaElement Source="Resources/Jhin.mp4" MediaEnded="MediaElement_MediaEnded" LoadedBehavior="Play"
+                      x:Name="VideoPlayer" Stretch="UniformToFill" Volume="0.1" Grid.RowSpan="2" IsMuted="True"/>
+        <Grid Background="#70999999" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" Content ="Settings" FontSize="20" BorderThickness="5" BorderBrush="#70000000" Margin="90,45,90,45"/>
+            <Button Grid.Column="1" Content ="Play Now" FontSize="30" BorderThickness="5" BorderBrush="#70000000" Margin="75,35,75,35"/>
+            <ComboBox Grid.Column="2" FontSize="20" BorderThickness="5" BorderBrush="#000000" Margin="90,45,90,45" />
         </Grid>
-        <MediaElement Source="Resources/Jhin.mp4" MediaEnded="MediaElement_MediaEnded" LoadedBehavior="Play"
-                      x:Name="VideoPlayer" Stretch="UniformToFill" Volume="0.1" Grid.RowSpan="2" IsMuted="True"/>
     </Grid>
 </Window>
