--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:GameLauncher"
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280">
-    <Grid>
+    <Grid>  
         <Grid.RowDefinitions>
             <RowDefinition Height="4*" />
             <RowDefinition Height="*" />
@@ -19,7 +19,7 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Content ="Settings" FontSize="20" FontWeight="Bold" BorderThickness="5" BorderBrush="#70000000" Margin="90,45,90,45"/>
+            <Button Grid.Column="0" Content ="Settings" Click ="SettingsClick" FontSize="20" FontWeight="Bold" BorderThickness="5" BorderBrush="#70000000" Margin="90,45,90,45"/>
             <Button Grid.Column="1" Content ="Play Now" FontSize="30" FontWeight="Bold" BorderThickness="5" BorderBrush="#70000000" Margin="75,35,75,35"/>
             <ComboBox Grid.Column="2" FontSize="20" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" BorderThickness="5" BorderBrush="#000000" Margin="90,45,90,45">
                 <ComboBoxItem Content="1.0.0"></ComboBoxItem>
