--- a/View/SettingsWindow.xaml
+++ b/View/SettingsWindow.xaml
@@ -7,6 +7,19 @@
         mc:Ignorable="d"
         Title="SettingsWindow" Height="450" Width="800">
     <Grid>
-        <Button Grid.Column="0" Content ="Settings" Click ="ExitClick" FontSize="20" FontWeight="Bold" BorderThickness="5" BorderBrush="#70000000" Margin="90,45,90,45"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Button Grid.Column="1" Grid.Row="2" Content ="Exit" Click ="ExitClick" FontSize="20" FontWeight="Bold" BorderThickness="5" Height="40" BorderBrush="#70000000" Margin="90,45,90,45"/>
+        <TextBlock Grid.Column="1" Grid.Row="1" Text="Volume" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" Margin="0,0,0,80"></TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding ElementName=VolumeSlider, Path=Value}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"></TextBlock>
+        <Slider Name="VolumeSlider" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Width="150" Margin="0,60,0,0"/>
     </Grid>
 </Window>
