--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -3,16 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GameLauncher"
+        xmlns:local="clr-namespace:GameLauncher.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1280">
+        Title="MainWindow" Height="720" Width="1280"
+        d:DataContext="{d:DesignInstance Type=local:MainViewModel}">
     <Grid>  
         <Grid.RowDefinitions>
             <RowDefinition Height="4*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <MediaElement Source="Resources/Jhin.mp4" MediaEnded="MediaElement_MediaEnded" LoadedBehavior="Play"
-                      x:Name="VideoPlayer" Stretch="UniformToFill" Volume="0.1" Grid.RowSpan="2" IsMuted="True"/>
+                      x:Name="VideoPlayer" Stretch="UniformToFill" Volume="{Binding VolumeLevel}" Grid.RowSpan="2" IsMuted="{Binding IsMuted}"/>
         <Grid Background="#70999999" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
