--- a/View/SettingsWindow.xaml
+++ b/View/SettingsWindow.xaml
@@ -3,9 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GameLauncher.View"
+        xmlns:local="clr-namespace:GameLauncher.ViewModel"
         mc:Ignorable="d"
-        Title="SettingsWindow" Height="450" Width="800">
+        Title="SettingsWindow" Height="450" Width="800"
+        d:DataContext="{d:DesignInstance Type=local:SettingsViewModel}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -17,9 +18,11 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="1" Grid.Row="2" Content ="Exit" Click ="ExitClick" FontSize="20" FontWeight="Bold" BorderThickness="5" Height="40" BorderBrush="#70000000" Margin="90,45,90,45"/>
+        <TextBlock Grid.Column="1" Text="Mute Audio" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" Margin="0,0,0,80"></TextBlock>
+        <CheckBox Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding Mute}"></CheckBox>
         <TextBlock Grid.Column="1" Grid.Row="1" Text="Volume" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" Margin="0,0,0,80"></TextBlock>
-        <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding ElementName=VolumeSlider, Path=Value}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"></TextBlock>
-        <Slider Name="VolumeSlider" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Width="150" Margin="0,60,0,0"/>
+        <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Volumetext}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"></TextBlock>
+        <Slider Grid.Column="1" Grid.Row="1" Maximum="100" Value="{Binding Volume}" VerticalAlignment="Center" Margin="0,80,0,0"></Slider>
+        <Button Grid.Column="1" Grid.Row="2" Content ="Exit" Click ="ExitClick" FontSize="20" FontWeight="Bold" BorderThickness="5" Height="40" BorderBrush="#70000000" Margin="90,45,90,45"/>
     </Grid>
 </Window>
