--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -12,7 +12,7 @@
             <RowDefinition Height="4*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <MediaElement Source="Resources/Jhin.mp4" MediaEnded="MediaElement_MediaEnded" LoadedBehavior="Play"
+        <MediaElement MediaEnded="MediaElement_MediaEnded" LoadedBehavior="Play"
                       x:Name="VideoPlayer" Stretch="UniformToFill" Volume="{Binding VolumeLevel}" Grid.RowSpan="2" IsMuted="{Binding IsMuted}"/>
         <Grid Background="#70999999" Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -21,11 +21,8 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Button Grid.Column="0" Content ="Settings" Click ="SettingsClick" FontSize="20" FontWeight="Bold" BorderThickness="5" BorderBrush="#70000000" Margin="90,45,90,45"/>
-            <Button Grid.Column="1" Content ="Play Now" FontSize="30" FontWeight="Bold" BorderThickness="5" BorderBrush="#70000000" Margin="75,35,75,35"/>
-            <ComboBox Grid.Column="2" FontSize="20" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" BorderThickness="5" BorderBrush="#000000" Margin="90,45,90,45">
-                <ComboBoxItem Content="1.0.0"></ComboBoxItem>
-                <ComboBoxItem Content="1.0.1"></ComboBoxItem>
-                <ComboBoxItem Content="2.0.0"></ComboBoxItem>
+            <Button Grid.Column="1" Content ="Play Now" Click ="PlayClick" FontSize="30" FontWeight="Bold" BorderThickness="5" BorderBrush="#70000000" Margin="75,35,75,35"/>
+            <ComboBox Name="VersionBox" SelectedItem="{Binding SelectedVersion}" Grid.Column="2" FontSize="20" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" BorderThickness="5" BorderBrush="#000000" Margin="90,45,90,45">
             </ComboBox>
         </Grid>
     </Grid>
